--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                     </div>
 
                     <!-- Bouton pour télécharger le CV -->
-                    <a href="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/pdf/BETTIG_CV.pdf" class="download-btn" download>Télécharger mon CV</a>
+                    <a href="https://goukouolakaka.github.io/SITE/pdf/BETTIG_CV.pdf" class="download-btn" download>Télécharger mon CV</a>
                 </div>
             </div>
         </section>
