--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <section class="about">
             <div class="profile-container">
                 <!-- Photo de profil et bulle de texte -->
-                <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/profil.jpg.jpg" alt="Photo de profil" class="profile-photo">
+                <img src="https://goukouolakaka.github.io/SITE/images/profil.jpg.jpg" alt="Photo de profil" class="profile-photo">
                 <div class="speech-bubble">
                     <p>En tant qu'étudiant en BUT Réseaux et Télécommunications, je possède une solide expertise dans les domaines du pentesting et de la cybersécurité des infrastrucctures et des technologies réseaux, maîtrisant des outils tels que NMAP, Metasploit, Wireshark, Burp Suite et Nessus. Passionné par les nouvelles technologies et fort d’une formation continue en cybersécurité à l'IUT Nord Franche-Comté, je suis déterminé à contribuer activement à la sécurisation du numérique de demain.</p>
                 </div>
