--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
             <!-- Projet 1 avec Carrousel d'images -->
             <div class="project-card slide-in-left">
                 <div class="carousel">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ordiarduino.png" alt="Image 1 du projet 1" class="carousel-image active">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/Engine.png" alt="Image 2 du projet 1" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ultrason.png" alt="Image 3 du projet 1" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/ordiarduino.png" alt="Image 1 du projet 1" class="carousel-image active">
+                    <img src="https://goukouolakaka.github.io/SITE/images/Engine.png" alt="Image 2 du projet 1" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/ultrason.png" alt="Image 3 du projet 1" class="carousel-image">
                     <button class="prev">&#10094;</button>
                     <button class="next">&#10095;</button>
                 </div>
@@ -35,9 +35,9 @@
             <!-- Projet 2 avec Carrousel d'images -->
             <div class="project-card slide-in-left">
                 <div class="carousel">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/premiersite.png" alt="Image 1 du projet 2" class="carousel-image active">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/loisirs.png" alt="Image 2 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/premiersite.png" alt="Image 1 du projet 2" class="carousel-image active">
+                    <img src="https://goukouolakaka.github.io/SITE/images/loisirs.png" alt="Image 2 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
                     <button class="prev">&#10094;</button>
                     <button class="next">&#10095;</button>
                 </div>
@@ -47,37 +47,30 @@
             <h2 class="slide-in-left">Mon Stage en 2ème Année</h2>
             <div class="project-card slide-in-left">
                 <div class="carousel">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ordiarduino.png" alt="Image 1 du projet 1" class="carousel-image active">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/Engine.png" alt="Image 2 du projet 1" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ultrason.png" alt="Image 3 du projet 1" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ordiarduino.png" alt="Image 1 du projet 1" class="carousel-image active">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/Engine.png" alt="Image 2 du projet 1" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ultrason.png" alt="Image 3 du projet 1" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ordiarduino.png" alt="Image 1 du projet 1" class="carousel-image active">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/Engine.png" alt="Image 2 du projet 1" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ultrason.png" alt="Image 3 du projet 1" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ordiarduino.png" alt="Image 1 du projet 1" class="carousel-image active">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/Engine.png" alt="Image 2 du projet 1" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ultrason.png" alt="Image 3 du projet 1" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ordiarduino.png" alt="Image 1 du projet 1" class="carousel-image active">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/Engine.png" alt="Image 2 du projet 1" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/ultrason.png" alt="Image 3 du projet 1" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="file:///E:/donnee%20sauvegardees/cours/site%20BUT%203/images/contactavant.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/3CX Acceuil.png" alt="Image 1 du projet 1" class="carousel-image active">
+                    <img src="https://goukouolakaka.github.io/SITE/images/acceuil grandstream.png" alt="Image 2 du projet 1" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/Auto provisioning yeatel cravanche.png" alt="Image 3 du projet 1" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/bob desk notes.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/bob desk tickets.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/Bobdesk Acceuil.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/BOBDESK CHATENOY.png" alt="Image 1 du projet 1" class="carousel-image active">
+                    <img src="https://goukouolakaka.github.io/SITE/images/centreon acceuil.png" alt="Image 2 du projet 1" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/centreon adsl.png" alt="Image 3 du projet 1" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/Centreon essert.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/centreon fibre.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/config unify.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/Config yealink OK.png" alt="Image 1 du projet 1" class="carousel-image active">
+                    <img src="https://goukouolakaka.github.io/SITE/images/exemple bon de livraison.png" alt="Image 2 du projet 1" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/exemple creation SIP LESSAY 208.png" alt="Image 3 du projet 1" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/exemple tableau switch.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/exemple vpn.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/interface statique switch.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/lignes selongey.png" alt="Image 1 du projet 1" class="carousel-image active">
+                    <img src="https://goukouolakaka.github.io/SITE/images/mail centreon au propre 1.png" alt="Image 2 du projet 1" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/Notes tickets selongey GS.png" alt="Image 3 du projet 1" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/sip trunk VEZINS 108.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/ticket selongey GS.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/vue d'ensemble coloc cravanche.png" alt="Image 3 du projet 2" class="carousel-image">
                     <button class="prev">&#10094;</button>
                     <button class="next">&#10095;</button>
                 </div>
