--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
                     <img src="https://goukouolakaka.github.io/SITE/images/acceuil grandstream.png" alt="Image 2 du projet 1" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/Auto provisioning yeatel cravanche .png" alt="Image 3 du projet 1" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/bob desk notes.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="https://goukouolakaka.github.io/SITE/images/bob desk tickets.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/bob desk ticktets.png" alt="Image 3 du projet 2" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/Bobdesk Acceuil.png" alt="Image 3 du projet 2" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/BOBDESK CHATENOY.png" alt="Image 1 du projet 1" class="carousel-image active">
                     <img src="https://goukouolakaka.github.io/SITE/images/centreon acceuil.png" alt="Image 2 du projet 1" class="carousel-image">
