--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                     <img src="https://goukouolakaka.github.io/SITE/images/centreon adsl.png" alt="Image 3 du projet 1" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/Centreon essert.png" alt="Image 3 du projet 2" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/centreon fibre.png" alt="Image 3 du projet 2" class="carousel-image">
-                    <img src="https://goukouolakaka.github.io/SITE/images/config unify.png" alt="Image 3 du projet 2" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/config unify .png" alt="Image 3 du projet 2" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/Config yealink OK.png" alt="Image 1 du projet 1" class="carousel-image active">
                     <img src="https://goukouolakaka.github.io/SITE/images/exemple bon de livraison.png" alt="Image 2 du projet 1" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/exemple creation SIP LESSAY 208.png" alt="Image 3 du projet 1" class="carousel-image">
@@ -67,7 +67,7 @@
                     <img src="https://goukouolakaka.github.io/SITE/images/interface statique switch.png" alt="Image 3 du projet 2" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/lignes selongey.png" alt="Image 1 du projet 1" class="carousel-image active">
                     <img src="https://goukouolakaka.github.io/SITE/images/mail centreon au propre 1.png" alt="Image 2 du projet 1" class="carousel-image">
-                    <img src="https://goukouolakaka.github.io/SITE/images/Notes tickets selongey GS.png" alt="Image 3 du projet 1" class="carousel-image">
+                    <img src="https://goukouolakaka.github.io/SITE/images/Notes ticket selongey GS.png" alt="Image 3 du projet 1" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/sip trunk VEZINS 108.png" alt="Image 3 du projet 2" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/ticket selongey GS.png" alt="Image 3 du projet 2" class="carousel-image">
                     <img src="https://goukouolakaka.github.io/SITE/images/vue d'ensemble coloc cravanche.png" alt="Image 3 du projet 2" class="carousel-image">
