--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                     <button class="prev">&#10094;</button>
                     <button class="next">&#10095;</button>
                 </div>
-                <p>Description du projet 1</p>
+                <p>Réalisation et programmation d'un robot en arduino, qui évite les obstacles grâce à un capteur ultrasons</p>
             </div>
 
             <!-- Projet 2 avec Carrousel d'images -->
@@ -41,7 +41,7 @@
                     <button class="prev">&#10094;</button>
                     <button class="next">&#10095;</button>
                 </div>
-                <p>Description du projet 2</p>
+                <p>1er site de présentation</p>
             </div>
             <br>
             <h2 class="slide-in-left">Mon Stage en 2ème Année</h2>
@@ -74,7 +74,7 @@
                     <button class="prev">&#10094;</button>
                     <button class="next">&#10095;</button>
                 </div>
-                <p>Description du projet 1</p>
+                <p></p>
             </div>
         </section>
     </main>
